# multi-Agent-ai-research-and-reasoning-platform

./: .gitignore  Dockerfile  README.md  run.sh
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_faiss.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  critic.py  planner.py  reasoning.py  research.py  router.py  synthesizer.py  tool_agent.py
backend/app/api/: __init__.py  routes.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: __init__.py  cache.py  models.py  orchestrator.py
backend/app/memory/: __init__.py  conversation.py
backend/app/rag/: __init__.py  document_processor.py  embeddings.py  vector_store.py
backend/app/tools/: __init__.py  code_executor.py  knowledge.py  web_search.py
backend/data/faiss_index/: index.faiss  index.pkl
backend/uploads/: test_doc.txt  test_knowledge.txt
frontend/: app.js  index.html  style.css
