[project]
name = "multi-agent-ai-knowledge-decision-system"
version = "1.0.0"
description = "A production-ready backend system implementing a sophisticated multi-agent architecture."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "faiss-cpu>=1.9.0",
    "sentence-transformers>=3.3.0",
    "duckduckgo-search>=7.0.0",
    "pypdf>=5.0.0",
    "python-multipart>=0.0.18",
    "redis>=5.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0"
]
